# Algorithms

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
binary-search-trees/: CMakeLists.txt  README.md
binary-search-trees-startcode/: .gitignore  CMakeLists.txt  README.md
binary-search-trees-startcode/apps/: CMakeLists.txt  recap.cpp
binary-search-trees-startcode/include/: node.hpp  tree.hpp
binary-search-trees/apps/: CMakeLists.txt  recap.cpp
binary-search-trees/include/: node.hpp  tree.hpp
color-quantization/: CMakeLists.txt  README.md
color-quantization/include/: chrono.h  color.h  colorDimensions.h  colorHash.h  colorQuantizer.h  kdColorQuantizer.h  kdNode.h  kdTree.h  naiveColorQuantizer.h
color-quantization/src/: color.cpp  kdColorQuantizer.cpp  kdTree.cpp  main.cpp  naiveColorQuantizer.cpp
decrease-and-conquer/: .gitignore  CMakeLists.txt  README.md  TestSet.csv  TrainingSet.csv
decrease-and-conquer/include/: QuickSelect.h  chrono.h  kNN.h
decrease-and-conquer/src/: chrono.cpp  fakeCoin.cpp  kNN.cpp  main.cpp
decrease-and-conquer/test/: CMakeLists.txt  test.cpp
include/: lib.h
left-leaning-red-black-trees/: .gitignore  CMakeLists.txt  README.md
left-leaning-red-black-trees/include/: color.h  node.h  tree.h
left-leaning-red-black-trees/src/: main.cpp  tree.cpp
left-leaning-red-black-trees/test/: CMakeLists.txt  test.cpp
red-black-trees/: .gitignore  CMakeLists.txt
red-black-trees/include/: color.h  node.h  redBlackTree.h
red-black-trees/src/: main.cpp  redBlackTree.cpp
red-black-trees/test/: CMakeLists.txt  test.cpp
src/: main.cpp
test/: CMakeLists.txt  test.cpp
trees-recap/: CMakeLists.txt
trees-recap/apps/: CMakeLists.txt  recap.cpp
trees-recap/include/: node.hpp  tree.hpp
